@@ -1,5 +1,5 @@
 DIST chocolate-doom-1.1.1.tar.gz 639599 RMD160 1ffffa0cdb4d7ab01c41121d8a938c74a48d85f5 SHA1 d5463c5095d2c10b057d7a6b46867796cb4a4df9 SHA256 0c2fe38a97b93dc8cec2707dc5150b9a46086711ec22729bd931956b6a0a24dc
 EBUILD chocolate-doom-1.1.1.ebuild 1874 RMD160 ded7ed69d72d9df95b2e4289c1e126573c91c697 SHA1 43b6d8f0311d00f8fc3ebfa8282500ff152b3c6a SHA256 6514caae749c2287258a2c77854991ef9e71939931e486de3bcf8564570b4825
 EBUILD chocolate-doom-9999.ebuild 1949 RMD160 83fe6203f97ebbc0cd05dd1405cf1c12e1e05c00 SHA1 9f6717d001cd2172206da0cf1489c1d2fbd5fadf SHA256 2641598f659f81da291d716d8b558e49db6ad20ff50454439d8ba7429c41266f
-MISC ChangeLog 1028 RMD160 c5a9dfe109ebeaa44bdb70f9cbb41158b64f8dcc SHA1 862f6f5ccb6ca82c91cc3b65daac66a733220978 SHA256 a4d8be0344846254d033ea582452e761f3d102a73cf2b4798072fe43d181ce59
-MISC metadata.xml 325 RMD160 165af415487e46f894ea96d95fc7a9893998918e SHA1 145f673f86b7460eff4e9703b6440e0da268dd4b SHA256 e186b93928e5f0d93cf9e3a8d9b542c0c570f7ae56cad7420299d9511720ed8d
+MISC ChangeLog 1149 RMD160 e7322f15276b3f0dbe260fec624429e5700a7ec8 SHA1 3cac6ae1eaf6241d829e18ef284393f88480910f SHA256 d2474686e07cfd45742c2e7dea6833a71201c639dfeb83b4d21bf659cc362b23
+MISC metadata.xml 418 RMD160 5c1b2d1d0d97aa60e395d2c809baa6933f5fbbf5 SHA1 69822bc380252b10b29677948df4ad1f32543ddf SHA256 35861e8be1829fc861c4a6b69a7ccb31026449a51b75821f720b72ce202354da
